@@ -1,3 +1,5 @@
+[2017-08-06 19:57:47 +0200]  Use octopi in plasma. Use kalu in openbox                                  karasu      {86a428c0}
+[2017-08-04 21:32:07 +0200]  vim-minimal does not exist                                                 karasu      {45b9eb6d}
 [2017-08-04 21:31:20 +0200]  vim-minimal does not exist                                                 karasu      {4af1a540}
 [2017-08-04 20:58:58 +0200]  location screen text was too small                                         karasu      {1bf40067}
 [2017-08-04 20:41:34 +0200]  Only Gnome and Mate (for now) available to a11y                            karasu      {bd8f2e87}
